fix the scrollbar problems for ipad, iphone landscape
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtLoginApp/trunk@75396 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/WebApp/landing/platform.ou.edu/css/ou-style.css
+++ b/src/main/WebApp/landing/platform.ou.edu/css/ou-style.css
@@ -398,7 +398,7 @@ a.tip:hover span::before {
 		font-size: 2.3em;
 	}
 	#mast-text {
-		margin-top: 14%;
+		margin-top: 11%;
 	}
 }
 
@@ -564,7 +564,6 @@ a.tip:hover span::before {
 	color: #494949;
 	margin-bottom: 0.5em;
 	font: normal 300 1.75rem 'Open Sans', Arial, Helvetica, sans-serif;
-	margin-right: -1em;
 	margin-left: 0.9375rem;
 }
 a.button.tabBtn {
